--- a/python_tricks/1 Patterns for Cleaner Python/context_managers.ipynb
+++ b/python_tricks/1 Patterns for Cleaner Python/context_managers.ipynb
@@ -3,8 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Context Managers and the with Statement\r\n",
-    "\r\n",
+    "# Context Managers and the `with` Statement"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "The with statement simplifies exception handling by encapsulating standard uses of try/finally statements in so-called context managers. Most commonly it is used to manage the safe acquisition and release of system resources. Resources are acquired by the with statement and released automatically when execution leaves the with context. Using with effectively can help you avoid resource leaks and make your code easier to read.\r\n",
     "\r\n",
     "Useful for connecting to database, opening file, API, etc."
