--- a/python_tricks/2 Effective Functions/args_kwargs.ipynb
+++ b/python_tricks/2 Effective Functions/args_kwargs.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# `*args` and `**kwargs`"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "`*` and `**` in definition means packing\r\n",
     "`*` and `**` in function call means unpacking"
    ],
