--- a/python_tricks/2 Effective Functions/decorators.ipynb
+++ b/python_tricks/2 Effective Functions/decorators.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Decorators"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Decorator is a callable that takes a callable as input and returns another callable\r\n",
     "Callable - eg. function, class, method\r\n",
     "\r\n",
