--- a/python_tricks/2 Effective Functions/return_none.ipynb
+++ b/python_tricks/2 Effective Functions/return_none.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Nothing to Return"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "If not explicitly defined, all functions return `None`\r\n",
     "If function doesn't have return value don't write explicit return `None` unless it helps readability"
    ],
