--- a/python_tricks/3 Classes & OOP/string_conversion.ipynb
+++ b/python_tricks/3 Classes & OOP/string_conversion.ipynb
@@ -3,6 +3,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# String Conversion  (Every Class Needs a `__repr__`)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "`str()` calls `__str__` method in pythonic way\r\n",
     "`repr()` calls `__repr__` method in pythonic way\r\n",
     "\r\n",
