--- a/python_tricks/1 Patterns for Cleaner Python/strings.ipynb
+++ b/python_tricks/1 Patterns for Cleaner Python/strings.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Strings"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
