--- a/python_tricks/2 Effective Functions/functions_first_class.ipynb
+++ b/python_tricks/2 Effective Functions/functions_first_class.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Python’s Functions Are First-Class"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
