--- a/python_tricks/3 Classes & OOP/exception_classes.ipynb
+++ b/python_tricks/3 Classes & OOP/exception_classes.ipynb
@@ -3,19 +3,15 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Object Comparisons: `is` vs `==`"
+    "# Defining Your Own Exception Classes"
    ],
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "An `is` expression evaluates to `True` if two variables point to the\r\n",
-    "same (identical) object.\r\n",
-    "\r\n",
-    "An `==` expression evaluates to `True` if the objects referred to by\r\n",
-    "the variables are equal (have the same contents)."
-   ],
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
