--- a/python_tricks/3 Classes & OOP/cloning_objects.ipynb
+++ b/python_tricks/3 Classes & OOP/cloning_objects.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "source": [
     "original_list = [1, 2 , [3]]\r\n",
     "original_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\r\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "source": [
     "original_list = [1, 2 , [3]]  # nested element\r\n",
     "new_list = list(original_list)\r\n",
@@ -49,16 +49,7 @@
     "print(original_list)\r\n",
     "print(new_list)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "['copied', 2, ['referenced']]\n",
-      "[1, 2, ['referenced']] new_list is not fully independent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -73,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "source": [
     "import copy\r\n",
     "original_list = [1, 2 , [3]]\r\n",
@@ -94,6 +85,13 @@
       "[1, 2, [3]]\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You can copy arbitrary objects like classes using shallow or deep copy from `copy` module"
    ],
    "metadata": {}
   }
