--- a/python_tricks/3 Classes & OOP/methods.ipynb
+++ b/python_tricks/3 Classes & OOP/methods.ipynb
@@ -70,6 +70,14 @@
     "Static method cannot modify class or instance state."
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Module methods\r\n",
+    "Functions outside the class."
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
