--- a/patterns/builder.ipynb
+++ b/patterns/builder.ipynb
@@ -1,10 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "source": [
-    "# Dependency Inversion Principle"
-   ],
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
@@ -12,15 +12,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.6",
-   "mimetype": "text/x-python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "pygments_lexer": "ipython3",
-   "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "version": "3.9.6"
   },
   "kernelspec": {
    "name": "python3",
