--- a/python_tricks/3 Classes & OOP/string_conversion.ipynb
+++ b/python_tricks/3 Classes & OOP/string_conversion.ipynb
@@ -110,6 +110,17 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# ??????????? sprawdzić\r\n",
+    "def __repr__(self):\r\n",
+    "    return \"<{0.__class__.__name__}({0.x}, {0.y}, {0.z})>\".format(self)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
