--- a/FullStackPythonSecurity/1_crypto_foundations.ipynb
+++ b/FullStackPythonSecurity/1_crypto_foundations.ipynb
@@ -170,7 +170,128 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Keyed hashing"
+    "# Keyed hashing\r\n",
+    "Data authentication (who authored the change?) - requires __key__ and a __keyed hash function__"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Key generation\r\n",
+    "Key can be in form of:\r\n",
+    "- random number - sequence of random numbers\r\n",
+    "- passphrase - sequence of random words"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Random number\r\n",
+    "Keys that are hard to remember\r\n",
+    "\r\n",
+    "Use `secrets` module. Do not use `random` module."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import os\r\n",
+    "\r\n",
+    "# random secret generation - 16 bytes\r\n",
+    "print(os.urandom(16))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "source": [
+    "\r\n",
+    "from secrets import token_bytes, token_hex, token_urlsafe\r\n",
+    "\r\n",
+    "# random secret generation - 16 bytes\r\n",
+    "print(token_bytes(16))\r\n",
+    "print(token_hex(16))\r\n",
+    "print(token_urlsafe(16))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "b'\\xf0\\x026k\\xd5<\\x82\\xb0]\\xd7\\x19\\r\\x9f\\xa4^\\xd1'\n",
+      "8db7f6bd42b955834515417639e717ca\n",
+      "ZE6wu-gX-hLJz1E3QbtStQ\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Passphrases\r\n",
+    "Keys that are easy to remember"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "source": [
+    "import secrets\r\n",
+    "from pathlib import Path\r\n",
+    "\r\n",
+    "words = Path('wordlist.txt').read_text().splitlines()\r\n",
+    "passphrase = ' '.join(secrets.choice(words) for i in range(4))\r\n",
+    "print(passphrase)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "mug lyric dose shelf\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Keyed hashing\r\n",
+    "__Keyed hash functions__ use _key and message_ to produce _hash value_. The same message with different key is hashed to different hash value."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "source": [
+    "from hashlib import blake2b\r\n",
+    "\r\n",
+    "m = b'message'\r\n",
+    "x = b'key x'\r\n",
+    "y = b'key y'\r\n",
+    "\r\n",
+    "print(blake2b(m, key=x).hexdigest())\r\n",
+    "print(blake2b(m, key=y).hexdigest())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "9b565c9c0c8187eda5b9b252a7ac2ca8f5b4bf765bdc77c2c45a0403e9b044105feb45e754414c76f2b598e952c7120243cc2a37818f1a46e84a5a367d907b40\n",
+      "8c845aee3d49d92d3487b21aa228663edaf04172087b0e18447e6db99ad7d3f0f5483c5f576d5e41a426ddd7974a592be26d2ee71fda9ad093a44de3d977a70d\n"
+     ]
+    }
    ],
    "metadata": {}
   },
