--- a/mynotes/types.ipynb
+++ b/mynotes/types.ipynb
@@ -163,7 +163,8 @@
     "## `str`\r\n",
     "- ordered\r\n",
     "- immutable\r\n",
-    "- iterable"
+    "- iterable\r\n",
+    "- can be represented as UTF-8 (default for Python 3) unicode code points (`''.decode()`) or encoded to bytes (`''.encode()` or `b''`)"
    ],
    "metadata": {}
   },
