--- a/FullStackPythonSecurity/1_crypto_foundations.ipynb
+++ b/FullStackPythonSecurity/1_crypto_foundations.ipynb
@@ -35,6 +35,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Cryptographic hashing in Python"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "source": [
@@ -133,6 +140,7 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Checksum functions\r\n",
     "Checksums (eg. CRC, Adler-32) are fast and have insufficient collision resistance - can be used for error detection.\r\n",
     "\r\n",
     "Hash functions (SHA2 family, SHA3 family) are slower and have sufficient collision resistance - can be used for testing data integrity."
@@ -171,6 +179,7 @@
    "cell_type": "markdown",
    "source": [
     "# Keyed hashing\r\n",
+    "## Data authentication\r\n",
     "Data authentication (who authored the change?) - requires __key__ and a __keyed hash function__"
    ],
    "metadata": {}
@@ -178,7 +187,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Key generation\r\n",
+    "### Key generation\r\n",
     "Key can be in form of:\r\n",
     "- random number - sequence of random numbers\r\n",
     "- passphrase - sequence of random words"
@@ -265,8 +274,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Keyed hashing\r\n",
-    "__Keyed hash functions__ use _key and message_ to produce _hash value_. The same message with different key is hashed to different hash value."
+    "### Keyed hashing\r\n",
+    "__Keyed hash functions__ use _key and message_ to produce _hash value_. The same message with different key is hashed to different hash value. Only some functions can do that by default like `blake2b`."
    ],
    "metadata": {}
   },
@@ -291,6 +300,131 @@
       "9b565c9c0c8187eda5b9b252a7ac2ca8f5b4bf765bdc77c2c45a0403e9b044105feb45e754414c76f2b598e952c7120243cc2a37818f1a46e84a5a367d907b40\n",
       "8c845aee3d49d92d3487b21aa228663edaf04172087b0e18447e6db99ad7d3f0f5483c5f576d5e41a426ddd7974a592be26d2ee71fda9ad093a44de3d977a70d\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## HMAC functions\r\n",
+    "Hash-based Message Authentication Code.\r\n",
+    "\r\n",
+    "HMAC functions allow any generic hashing function to become keyed hash functions. It has 3 inputs:\r\n",
+    "- message\r\n",
+    "- key\r\n",
+    "- hash function"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "import hashlib\r\n",
+    "import hmac\r\n",
+    "\r\n",
+    "xx = hmac.new(key=b'key', msg=b'message', digestmod=hashlib.sha3_256)\r\n",
+    "print(xx.name)  # protocol name prefixed with HMAC\r\n",
+    "print(xx.hexdigest())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hmac-sha3_256\n",
+      "0f43852a24d5597a8200312a95993991581679d63264f1b1ad4b5ccac7fe8ba4\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Data authentication between parties"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "import hashlib\r\n",
+    "import hmac\r\n",
+    "import json\r\n",
+    "hmac_sha256 = hmac.new(b'shared_key', digestmod=hashlib.sha256)\r\n",
+    "message = b'from Bob to Alice'\r\n",
+    "hmac_sha256.update(message)\r\n",
+    "hash_value = hmac_sha256.hexdigest()\r\n",
+    "authenticated_msg = {\r\n",
+    "    'message': list(message),\r\n",
+    "    'hash_value': hash_value, \r\n",
+    "    }\r\n",
+    "outbound_msg_to_alice = json.dumps(authenticated_msg)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "import hashlib\r\n",
+    "import hmac\r\n",
+    "import json\r\n",
+    "authenticated_msg = json.loads(inbound_msg_from_bob)\r\n",
+    "message = bytes(authenticated_msg['message'])\r\n",
+    "hmac_sha256 = hmac.new(b'shared_key', digestmod=hashlib.sha256)\r\n",
+    "hmac_sha256.update(message)\r\n",
+    "hash_value = hmac_sha256.hexdigest()\r\n",
+    "if hash_value == authenticated_msg['hash_value']:\r\n",
+    "    print('trust message')"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'inbound_msg_from_bob' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7256/911991089.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mhmac\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mauthenticated_msg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minbound_msg_from_bob\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mmessage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbytes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mauthenticated_msg\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'message'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mhmac_sha256\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhmac\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnew\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mb'shared_key'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdigestmod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mhashlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msha256\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'inbound_msg_from_bob' is not defined"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Timing attacks\r\n",
+    "String comparison of 2 hash values is faster if they are different (evaluates to False faster). Attacker can measure response time to invalid.\r\n",
+    "\r\n",
+    "To mitigate this problem use length-constant time or random time. Always use `compare_digest()` for hashes.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "source": [
+    "from hmac import compare_digest\r\n",
+    "\r\n",
+    "compare_digest('abc', 'abcd')"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
     }
    ],
    "metadata": {}
