--- a/FullStackPythonSecurity/1_crypto_foundations.ipynb
+++ b/FullStackPythonSecurity/1_crypto_foundations.ipynb
@@ -354,7 +354,7 @@
     "\n",
     "# token - combined ciphertext HMAC hash value from that ciphertext (confidentiality + message authenticity???)\n",
     "token = fernet.encrypt(b'duuupa')\n",
-    "token\n"
+    "token"
    ]
   },
   {
@@ -367,20 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[b'gAAAAABhZf2m8fsWiJSZZ-nr1O7zz303Y_hh4cvc4I3BKru7foFj5LkEiY0mvS-y6QUOPbYJUMe3RHjx2mahgykAnpH0_zmxHw==', b'gAAAAABhZf2msgsd5HBERRvlJLkS_ZwBqFr4EzKEmvv56Yyg9vlWHu1-XS9Lv2c6rZ73A9gH37p6Vg1Apa3KiF7p58oDa9c_sA==']\n",
-      "[b'gAAAAABhZf2mOlIZSZWO584VDsvhWALqC_ibYnZUXR9D7A1GGDAaTtJpQSgK2sSowtUZuhLrmDq4rPiNXIJMtf7alpGFQtNKFg==', b'gAAAAABhZf2m-vtRV8LyCt4JFqEnnP4WaheX6OyL4hQK34SSCuLb2pqq25hPHZkHErMg8ty3LXNMOwWLfK5vc2ytKOYBG2m5HA==']\n",
-      "b'dupa'\n",
-      "b'krowa'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cryptography.fernet import Fernet, MultiFernet\n",
     "\n",
@@ -416,6 +405,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Categories of encryption algorithms\n",
+    "- block ciphers (AES - 128, 192, 256) - encrypts fixed-length blocks\n",
+    "- stream ciphers (ChaCha) - processes stream of bytes\n",
+    "\n",
+    "### Symmetric encryption modes:\n",
+    "- ECB (Electronic CodeBook) - for less than block-length plaintext fills in with padding\n",
+    "- CBC (Cipher Block Chaining) - with initialization vector (IV)\n",
+    "- GCM (Galois Counter Mode)\n",
+    "- others"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ECB example\n",
+    "from cryptography.hazmat.backends import default_backend\n",
+    "from cryptography.hazmat.primitives.ciphers import Cipher, algorithms, modes\n",
+    "\n",
+    "\n",
+    "key = b'key must be 128, 196 or 256 bits'\n",
+    "cipher = Cipher(\n",
+    "    algorithms.AES(key),  # AES cipher\n",
+    "    modes.ECB(),  # ECB mode\n",
+    "    backend=default_backend()  # OpenSSL\n",
+    "    )\n",
+    "\n",
+    "encryptor = cipher.encryptor()\n",
+    "plaintext = b'block size = 128'  # signle block of plaintext\n",
+    "\n",
+    "ciphertext = encryptor.update(plaintext) + encryptor.finalize()  # single block of ciphertext\n",
+    "print(ciphertext)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "- ecryption ensures confidentiality\n",
+    "- symmetric encryption algorithms use the same key for encryption and decryption"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Asymmetric encryption"
    ]
   },
@@ -423,7 +461,125 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transport Layer Security"
+    "## RSA public-key encryption\n",
+    " \n",
+    "RSA - public-key cryptosystem that involves 4 steps:\n",
+    "1. key generation\n",
+    "1. key distribution\n",
+    "1. encryption\n",
+    "1. decryption\n",
+    "\n",
+    "\n",
+    "Create private key:\n",
+    "\n",
+    "`openssl genpkey -algorithm RSA -out private_key.pem -pkeyopt rsa_keygen_bits:2048`\n",
+    "\n",
+    "Create public key:\n",
+    "\n",
+    "`openssl rsa -pubout -in private_key.pem -out public_key.pem`\n",
+    "\n",
+    " \n",
+    "Public-key cryptography allows:\n",
+    "- encrypting with public key and only private key can decrypt - ensures data confidentiality\n",
+    "- encrypting with private key and only public key can decrypt - ensures data authenticity\n",
+    " \n",
+    " \n",
+    "## Nonrepudiation\n",
+    "When system prevents a participant from denying their actions. Assymentric encryption alone\n",
+    " \n",
+    "Assymentric encryption alone does not ensure nonrepudiation because eg.:\n",
+    "- anyone with public key can create message and claim it's from someone else\n",
+    "- anyone who received message encrypted with private key can say he is the author of the message\n",
+    " \n",
+    "In order to achieve nonrepudiation a digital signature is needed.\n",
+    " \n",
+    "## RSA Digital signatures\n",
+    "Digital signature allows __anyone__ to check:\n",
+    "- who sent the message?\n",
+    "- has the message been modified in transit?\n",
+    " \n",
+    "Digital signature:\n",
+    "- is unique to signer\n",
+    "- can be used to legally bind the signer to a contract\n",
+    "- is difficult to forge\n",
+    " \n",
+    "Digital signature combines hashing with public-key encryption.\n",
+    " \n",
+    "Sender sends message hash encrypted with private key along with message itself\n",
+    "Receiver can decrypt the hash with public key and compare it with computed hash of a message\n",
+    " \n",
+    "RSA digital signing uses different padding scheme than RSA encryption.\n",
+    " \n",
+    "## Eclyptic-curve digital signatures\n",
+    "Cryptosystem similar to RSA with following characteristics:\n",
+    "- uses key-pair for signing data and verifying signatures\n",
+    "- private key cannot decrypt what public key encrypted\n",
+    "- faster signing data and verifying signatures than RSA\n",
+    "- less lines of code to use\n",
+    " \n",
+    " \n",
+    "## Summary\n",
+    "- Hashing ensures data integrity and data authentication.\n",
+    "- Encryption ensures confidentiality.\n",
+    "- Digital signatures ensure nonrepudiation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TLS - Transport Layer Security\n",
+    "- ensures data integrity, data authentication, confidentiality, and nonrepudiation\n",
+    "- point-to-point client/server protocol\n",
+    " \n",
+    "## TLS handshake\n",
+    "Typically client initiates handshake(s) with server. Handshake objective is to perform:\n",
+    "- cipher suite negotiation\n",
+    "- key exchange\n",
+    "- server authentication\n",
+    " \n",
+    "### Cipher suite negotiation\n",
+    "Client and server must first agree on common set of algorithms known as cipher suite. \n",
+    "Cipher suite defines encryption and hashing algorithms.\n",
+    "Each TLS version defines different cipher suites. \n",
+    "\n",
+    "\n",
+    "TLS 1.2 defines 37 cipher suites\n",
+    "\n",
+    "\n",
+    "TLS 1.3 defines 5 cipher suites:\n",
+    "- TLS_AES_128_CCM_8_SHA256\n",
+    "- TLS_AES_128_CCM_SHA256\n",
+    "- TLS_AES_128_GCM_SHA256\n",
+    "- TLS_AES_256_GCM_SHA384\n",
+    "- TLS_CHACHA20_POLY1305_SHA256\n",
+    "\n",
+    "\n",
+    "TLS_AES_128_GCM_SHA256:\n",
+    "- TLS_- common prefix\n",
+    "- AES_128_GCM - symmetric encryption with 128bit key in GCM mode\n",
+    "- _SHA256 - hashing\n",
+    "\n",
+    "\n",
+    "TLS ensures confidentiality with symmetric encryption (it's more efficient than assymetric encryption).\n",
+    " \n",
+    "### Key exchange\n",
+    "Client and server must exchange a key that will be used with cipher suite for symmetric encryption.\n",
+    "\n",
+    "In TLS 1.2 key-distribution problem is solved by Diffie-Hellman key exchange or STATIC RSA key-exchange method (worse)\n",
+    "\n",
+    "In TLS 1.3 key-distribution problem is solved by Diffie-Hellman key exchange (Perfect Forward Secrecy)\n",
+    "\n",
+    "Diffie-Hellman key-exchange is one-roundtrip key-exchange algorithm that results in both nodes independently computing shared secret key for symmetric encryption.\n",
+    " \n",
+    " \n",
+    " \n",
+    "### Server authentication\n",
+    "Public-key encryption is used for sever authentication\n",
+    " \n",
+    "## Django\n",
+    " \n",
+    "## Gunicorn"
    ]
   }
  ],
